# todo_app

./: README.md  pyproject copy.toml  pyproject.toml  requirements.txt
tests/: __init__.py  test_todo.py
todo/: __init__.py  __main__.py  cli.py  database.py  todo_.py
