# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task_manage"
version = "0.1.0"
description = "This is a CLI based local app made by some python scripts to help you manage your daily tasks."
authors = [{ name = "Shipu", email = "shipankar.shipu@gmail.com" }]

readme = "README.md"
license = { file = "LICENSE" }


classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
   "Programming Language :: Python :: 3",
]

keywords = ["todo app", "task manager", "task", "jira like", "cli"]


dependencies = [
    'python = ">=3.8"',
    'attrs = "21.4.0"',
    'click = "7.1.2"',
    'colorama = "0.4.4"',
    'iniconfig = "1.1.1"',
    'packaging = "21.3"',
    'pluggy = "0.13.1"',
    'py = "1.11.0"',
    'pyparsing = "3.0.9"',
    'shellingham = "1.4.0"',
    'toml = "0.10.2"',
    'typer = "0.3.2"'
]


[project.urls]
Homepage = "https://github.com/Shipu12345/todo_app"


[project.scripts]
todo = "todo.__main__:main"


